crates/daemon/tests/snapshots/cli_help__cli_help_label.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Apply a label to a message

Usage: mxr label [OPTIONS] <NAME> [MESSAGE_ID]...

Arguments:
  <NAME>           Label name
  [MESSAGE_ID]...  Message ID(s). If omitted, reads IDs from stdin when stdin is piped

Options:
      --search <SEARCH>
      --account <ACCOUNT>
      --yes
      --dry-run
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
