crates/daemon/tests/snapshots/cli_help__cli_help_labels.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Manage labels

Usage: mxr labels [OPTIONS] [COMMAND]

Commands:
  create  Create a new label
  delete  Delete a label
  rename  Rename a label
  help    Print this message or the help of the given subcommand(s)

Options:
      --account <ACCOUNT>
      --format <FORMAT>    [possible values: table, json, jsonl, csv, ids]
  -h, --help               Print help
