crates/daemon/tests/snapshots/cli_help__cli_help_labels_create.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Create a new label

Usage: mxr labels create [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --color <COLOR>
      --dry-run        Show what would change without creating the label
  -h, --help           Print help
