crates/daemon/tests/snapshots/cli_help__cli_help_labels_delete.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Delete a label

Usage: mxr labels delete [OPTIONS] <NAME>

Arguments:
  <NAME>

Options:
      --dry-run  Show what would change without deleting the label
      --yes      Skip the interactive confirmation prompt
  -h, --help     Print help
