crates/daemon/tests/snapshots/cli_help__cli_help_llm.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Inspect local/cloud LLM provider status

Usage: mxr llm [OPTIONS] [COMMAND]

Commands:
  status  Show LLM provider status
  help    Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
