crates/daemon/tests/snapshots/cli_help__cli_help_llm_status.snap
---
source: crates/daemon/tests/cli_help.rs
expression: stdout
---
Show LLM provider status

Usage: mxr llm status [OPTIONS]

Options:
      --format <FORMAT>  [possible values: table, json, jsonl, csv, ids]
  -h, --help             Print help
